[project]
name = "roborock-mcp"
version = "0.1.0"
description = "MCP server for controlling Roborock vacuums — multi-robot, room-level cleaning, status, consumables"
requires-python = ">=3.12"
dependencies = [
    "python-roborock>=5.29.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
roborock-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
